--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    width: 362px;
+
     height: 63px;
     color: #020253;
     font-family: 'Heebo', sans-serif, bold;
@@ -34,11 +34,16 @@ label {
 }
 
 
+.Coffee {
+    display: flex;
+    justify-content: left;
+}
+
 
 img {
     aspect-ratio: 1 / 1;
     width: 90%;
-    justify-self: left;
+
 
 }
 
@@ -50,6 +55,7 @@ img {
     flex-direction: row;
     border: 1px solid #707070;
     align-items: center;
+    justify-content: space-between;
 }
 
 .login {
@@ -88,14 +94,28 @@ input[type="email"] {
 
 
 @media screen and (max-width:1000px) {
+
+    p {
+        text-align: center;
+    }
+
     .container {
-        flex-direction: column;
+        flex-direction: column-reverse;
         max-height: 1920px;
         max-width: 900px;
-        min-width: 500px;
+        min-width: 450px;
     }
 
     .login {
         margin: 10% 0;
+        align-items: center;
+    }
+
+    .Coffee {
+        justify-content: center;
+    }
+
+    img {
+        width: 100%;
     }
 }
